# BE_data_analysis

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: Description_adultIncome.docx  Description_signLanguage.docx  adult_sample.csv
exercices/: adultIncome.ipynb  iris-knn.ipynb  main.py  signLanguage.ipynb
src/: adultIncome.ipynb  iris-knn.ipynb  signLanguage.ipynb  utils.py
src/iris_llm/: classifier.py  dataset.py  main.py
